# polars-incremental

./: README.md
polars-incremental/: README.md  pyproject.toml
polars-incremental/docs/: README.md  advanced-patterns.md  catalog.md  checkpoints.md  concepts.md  delta.md  errors.md  examples.md  faq.md  getting-started.md  maintenance.md  migrations.md  observability.md  performance.md  pipeline.md  schema-evolution.md  sources.md  state.md  testing.md
polars-incremental/examples/: basic_checkpointing.py  catalog_basic.py  cdc_apply.py  cdc_apply_delta.py  checkpoint_migration.py  delta_cdf.py  delta_schema_evolution_write.py  file_overwrites.py  files_start_offset.py  maintenance_checkpoint_cleanup.py  maintenance_delta_optimize.py  maintenance_delta_vacuum.py  maintenance_helpers.py  observability_basic.py  schema_evolution.py  schema_evolution_demo.py  schema_type_widen.py
polars-incremental/examples/advanced-patterns/: deduplication_strategies.py  incremental_aggregations.py  late_data_handling.py  watermarking.py
polars-incremental/src/polars_incremental/: __init__.py  catalog.py  cdc.py  (+7 more)
polars-incremental/tests/: test_catalog.py  test_cdc_apply.py  test_cdc_frame.py  test_checkpoint.py  test_delta_cdf.py  test_delta_checkpoint.py  test_delta_checkpoint_extra.py  test_delta_source.py  test_file_checkpoint_extra.py  test_maintenance.py  test_observability.py  test_pipeline.py  test_pipeline_context.py  test_schema_evolution.py  test_schema_utils.py  test_sinks_delta.py  test_sinks_parquet.py  test_source_config.py  test_sources_base.py  test_state.py
(+29 files in other folders)
